--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/04/02</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N. (1 woman; 10 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat smashed into reefs near Lanzarote, Canary Islands (ES)</b><br>Source: AFP/ARI/VK/StGallerTagblatt/BBC<br>
+Found dead: <b>05/05/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 1)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing, feared drowned after boat sank off Adra, Almería coast (ES); 29 survivors</b><br>Source: Humano/Publico/MUGAK/EP<br>
 
 <br>
 
