--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 15</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>went missing after boat from Al Hoceima (MA) disappeared in the Mediterranean Sea</b><br>Source: El Diario<br>
+Found dead: <b>28/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 26)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>found near Kam’yanytsya (UA) near Ukrainian-Slovakian border</b><br>Source: NOB<br>
 
 <br>
 
