--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 26)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>found near Kam’yanytsya (UA) near Ukrainian-Slovakian border</b><br>Source: NOB<br>
+Found dead: <b>Jul 10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>died disembarking from boat, body found on Ionian coast, Calabria (IT)</b><br>Source: ANSA/Gazzettino<br>
 
 <br>
 
