--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/06/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in detention centre in Caltanissetta (IT) after being refused medical care</b><br>Source: PICUM/TL<br>
+Found dead: <b>16/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 30)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died when car driven by smuggler overturned near Alexandroupoli (GR) during police chase</b><br>Source: PICUM<br>
 
 <br>
 
