--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/05/06</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found on boat caught up in a storm near Sfax (TN) on way from Libya to Italy</b><br>Source: IPL/ST/FE/Unipa<br>
+Found dead: <b>09/04/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Limbaya Ndinga (man, 32)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>suicide, hanged himself in home in Middleton (GB) after asylum claim was rejected</b><br>Source: Middleton Guardian/IRR<br>
 
 <br>
 
