--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 46)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died from inhaling camp stove fumes, at Moria refugee camp, Lesbos (GR)</b><br>Source: Reu./Newsweek/KI/Sputnik<br>
+Found dead: <b>18/03/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Uddhav Bhandari (man, 40)</b><br>Region of origin: <b>Nepal</b><br>Cause of death: <b>suicide, set himself on fire in Glasgow (GB) out of fear of deportation</b><br>Source: BBC/icS/EveningTimes/INDgb/Independent<br>
 
 <br>
 
