--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/05/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Osama (boy, 17)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>fell from cliff while trying to enter the Spanish enclave of Melilla (ES) from Morocco</b><br>Source: El Diario<br>
+Found dead: <b>14/02/18</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N. (4 children; 1 woman; 14 men)</b><br>Region of origin: <b>Somalia, Eritrea</b><br>Cause of death: <b>died in vehicle accident 60 km southeast of Bani Walid (LY); 159 survivors</b><br>Source: DTM/NationalAE/Reu./MENAFN/IOM Libya<br>
 
 <br>
 
