--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/11/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Akim (man, 24)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>jumped out of window to avoid police raid in his apartment block in Bremen (DE)</b><br>Source: NCADC/Int. Menschenr. Ver. Bremen/ARI/ZAG<br>
+Found dead: <b>Jan 12</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned, left by smugglers to cross the Evros River on Turkish-Greek border at night in 2 rubber dinghies</b><br>Source: GuardianUn.<br>
 
 <br>
 
