--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 12</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned, left by smugglers to cross the Evros River on Turkish-Greek border at night in 2 rubber dinghies</b><br>Source: GuardianUn.<br>
+Found dead: <b>May 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hashim Yasbek (man, 34)</b><br>Region of origin: <b>Lebanon</b><br>Cause of death: <b>died of heroin overdose in asylum centre in Schonefeld Ost (DE); body found 6 weeks later</b><br>Source: Karawane/MDR<br>
 
 <br>
 
