--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/11/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hamida Mujanovic (42)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>died of severe asthma and lack of medical treatment 3 months after she was forced to leave Germany for Bosnia</b><br>Source: ARI<br>
+Found dead: <b>Nov 07</b><br>Number of person: <b>57</b><br>Name, gender, age: <b>N.N. (57 men)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned in shipwreck while travelling from Alexandria (EG) to Italy</b><br>Source: LAT<br>
 
 <br>
 
