--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 07</b><br>Number of person: <b>57</b><br>Name, gender, age: <b>N.N. (57 men)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned in shipwreck while travelling from Alexandria (EG) to Italy</b><br>Source: LAT<br>
+Found dead: <b>16/03/97</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran, Iraq</b><br>Cause of death: <b>drowned after boat capsized between Kas (TR) and Kastellorizo (GR)</b><br>Source: MNS/FR/Libération<br>
 
 <br>
 
