--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 15</b><br>Number of person: <b>42</b><br>Name, gender, age: <b>N.N. (12 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>19 drowned when boat sank west of Kardak (TR); 23 missing, 138 rescued</b><br>Source: Imkander<br>
+Found dead: <b>04/03/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 19)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stabbed to death in fight in refugee hostel in Lindesberg (SE)</b><br>Source: AFP/DailyStar<br>
 
 <br>
 
