--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/02/01</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned near Tarifa (ES) when small boat capsized trying to reach Spain</b><br>Source: EP<br>
+Found dead: <b>25/02/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>found dead on boat drifting 12 km from Cap Blanc, Oran (DZ)</b><br>Source: YABI/AFP<br>
 
 <br>
 
