--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Naiva Apensa (man, 43)</b><br>Region of origin: <b>Suriname</b><br>Cause of death: <b>died in a fire at detention centre at Schiphol, Amsterdam Airport (NL)</b><br>Source: LR/MAG/MNS/ST/VK/Vivre/ASKV/FE/PICUM/NRC<br>
+Found dead: <b>09/12/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yemane Gaberanguse (man, 22)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died while trying to travel from Calais (FR) to Great Britain; had not been given medical treatment before leaving</b><br>Source: CMS<br>
 
 <br>
 
