--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/12/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yemane Gaberanguse (man, 22)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died while trying to travel from Calais (FR) to Great Britain; had not been given medical treatment before leaving</b><br>Source: CMS<br>
+Found dead: <b>10/09/05</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>bodies found on Licata Beach (IT), with 7 Egyptian traffickers caught; 149 survivors</b><br>Source: LR/VK<br>
 
 <br>
 
