--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/09/06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 child; 1 woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck near Lampedusa (IT) caused by overcrowding</b><br>Source: LR/FE/IntHeraldTribune/NOB/PICUM/Unipa<br>
+Found dead: <b>28/11/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died of pneumonia and medical neglect while waiting for a place at refugee camp in Vienna (AT)</b><br>Source: Rosa Antifa<br>
 
 <br>
 
