--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby, 8 months)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned, when dinghy sank off Lesbos (GR); 34 rescued</b><br>Source: Imkander<br>
+Found dead: <b>09/09/03</b><br>Number of person: <b>26</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Pakistan, Asia</b><br>Cause of death: <b>drowned after boat capsized in the Evros River on Turkish-Greek border</b><br>Source: BBC/ST/AP<br>
 
 <br>
 
