--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/05/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died in suspected fascist arson attack in Heppenheim in Hesse (DE)</b><br>Source: CARF/ZAG<br>
+Found dead: <b>30/03/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khalid Shahzad (man, 52)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>died after being released from Colnbrook removal centre (GB), left to travel alone despite poor health</b><br>Source: GuardianUn.<br>
 
 <br>
 
