--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/11/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 children; 1 adult)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>1 died at sea, 1 upon arrival on coast of El Hierro (ES), 1 in hospital a week later</b><br>Source: ElDia/Top News/ABC/FE/PICUM/MUGAK/EFE<br>
+Found dead: <b>01/12/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jeyakumar R.</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, in St. Gallen (CH) out of fear of deportation</b><br>Source: Arbeitsst. Asylfragen/TA<br>
 
 <br>
 
