--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/12/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jeyakumar R.</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, in St. Gallen (CH) out of fear of deportation</b><br>Source: Arbeitsst. Asylfragen/TA<br>
+Found dead: <b>20/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>died of heart attack while detained at Yarl’s Wood removal centre (GB)</b><br>Source: GuardianUn.<br>
 
 <br>
 
