--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>died of heart attack while detained at Yarl’s Wood removal centre (GB)</b><br>Source: GuardianUn.<br>
+Found dead: <b>20/03/17</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N. (1 woman; 9 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>burned, bodies found at unspecified location off coast of Zawiyah (LY)</b><br>Source: IOM Libya<br>
 
 <br>
 
