--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/10</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>froze to death, bodies found in Nea Vissa (GR), near Turkish-Greek border</b><br>Source: Frontexplode/MNS<br>
+Found dead: <b>15/07/17</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards near Iskenderun (TR) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
