--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/10/02</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (3 girls)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found near Lesbos (GR) wearing life vests</b><br>Source: MNS/NCAs<br>
+Found dead: <b>26/08/00</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq, Afghanistan, Iran</b><br>Cause of death: <b>missing, reportedly drowned near Kos (GR) after small boat capsized</b><br>Source: AFP/AP/BBC<br>
 
 <br>
 
