--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/08/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation and hypothermia, body found on boat that went adrift for 7 days on way to Spain</b><br>Source: MUGAK/DiariodeNavarra/LV/PerCat/ABC/SUR<br>
+Found dead: <b>17/06/17</b><br>Number of person: <b>110</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat sank off coast of Zuwara (LY); 25 rescued</b><br>Source: IOM Libya<br>
 
 <br>
 
