--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/09/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ahire Naruna Awaifo (man, 25)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>killed in demonstration in Guinea Bissau after expulsion from Spain</b><br>Source: MNS/EP/AI<br>
+Found dead: <b>19/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>shot by smuggler and thrown overboard after standing up without permission near Gergarish (LY)</b><br>Source: VK<br>
 
 <br>
 
