--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/11/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned during rescue attempt near Fuerteventura (ES)</b><br>Source: MNS/AFVIC/Libertaddigital/NOB<br>
+Found dead: <b>29/05/17</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (2 women; 8 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>10 drowned in shipwreck between Libya and Italy; 10 missing</b><br>Source: IOM Italy<br>
 
 <br>
 
