--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/05/17</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (2 women; 8 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>10 drowned in shipwreck between Libya and Italy; 10 missing</b><br>Source: IOM Italy<br>
+Found dead: <b>15/03/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sharif Hussein Ahmed (man)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>suicide, in Graz (AT), refused right to reside in Austria after winning European Court of Human Rights case</b><br>Source: MNS/UNHCR<br>
 
 <br>
 
