--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/03/05</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>found dead on boat travelling from Morocco to Spain</b><br>Source: MAG/MNS<br>
+Found dead: <b>30/11/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found on boat travelling from Africa to Spain, rescued by ARC sailing ship; 15 survivors</b><br>Source: YachtingWorld/FE/ELM/MNS/APDHA<br>
 
 <br>
 
