--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/06/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned in the Neisse River near Görlitz (DE) close to Polish-German border</b><br>Source: taz/German Government/FR/MNS/SZ/ZAG<br>
+Found dead: <b>20/03/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>heart attack after arriving in Lesbos (GR), threatened with deportation to Turkey</b><br>Source: MEOnline/Watch TheMed/Mail Online<br>
 
 <br>
 
