--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Istref Bajrami (man)</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>killed after returning to village of origin near Pristina (KS)</b><br>Source: ERRC<br>
+Found dead: <b>Feb 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Idris Demir (man)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>rejected asylum seeker, shot trying to escape from police in Jönköping (SE)</b><br>Source: IRR/MNS<br>
 
 <br>
 
