--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Idris Demir (man)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>rejected asylum seeker, shot trying to escape from police in Jönköping (SE)</b><br>Source: IRR/MNS<br>
+Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Christine Makodila (woman, 19)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
 
 <br>
 
