--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/01/03</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Tangier (MA) after trying to reach Spain by sea</b><br>Source: MNS/Vivre/MUGAK<br>
+Found dead: <b>26/05/12</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after inflatable dinghy to Italy started to deflate off coast of Libya</b><br>Source: Migreurop/LRP<br>
 
 <br>
 
